--- a/signin.html
+++ b/signin.html
@@ -49,7 +49,7 @@
                     <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
                         <div class="d-flex align-items-center justify-content-between mb-3">
                             <a href="index.html" class="">
-                                <img height=75px width=75px left src="E:\mini project\ski.png">
+                                <img height=75px width=75px left src="img/ski.png">
                             </a>
                             <h3>Sign In</h3>
                         </div>
