--- a/students-history.html
+++ b/students-history.html
@@ -216,40 +216,40 @@
                                     <td>Self</td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
                                     <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td>12.45</td>
+                                    <td>01 Jan 2045</td>
+                                    <td>8.00</td>
+                                    <td>Texas</td>
+                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
+                                    <td>Self</td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
                                     <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td>12.45</td>
+                                    <td>01 Jan 2045</td>
+                                    <td>8.00</td>
+                                    <td>Texas</td>
+                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
+                                    <td>Self</td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
                                     <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td>12.45</td>
+                                    <td>01 Jan 2045</td>
+                                    <td>8.00</td>
+                                    <td>Texas</td>
+                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
+                                    <td>Self</td>
                                 </tr>
                                 <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
                                     <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                    <td>12.45</td>
+                                    <td>01 Jan 2045</td>
+                                    <td>8.00</td>
+                                    <td>Texas</td>
+                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
+                                    <td>Self</td>
                                 </tr>
                             </tbody>
                         </table>
