--- a/students-status.html
+++ b/students-status.html
@@ -618,9 +618,9 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="students-profile.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
+                    <a href="students-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
                     
-                    <a href="students-status.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Track Status</a>
+                    <a href="students-status.html" class="nav-item nav-link active"><i class="fa fa-chart-bar me-2"></i>Track Status</a>
                     <a href="students-history.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>Logs</a>
                 </div>
             </nav>
