--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                             <label for="floatingPassword">Password</label>
                         </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
+                        <a href = "students-profile.html"><button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button></a>
                     </div>
                 </div>
             </div>
