tutor onleave page created

--- a/public/tutor-onleave.html
+++ b/public/tutor-onleave.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="navbar-nav w-100">
                     <a href="tutor-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
-                    <a href="tutor-ward.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>My Ward</a>
+                    <a href="tutor-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Leave Requests</a>
                         <div class="dropdown-menu bg-transparent border-0">
@@ -111,60 +111,61 @@
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
                             <thead>
                                 <tr class="text-dark">
+                                    <th scope="col">Roll No</th>
                                     <th scope="col">Name</th>
+                                    <th scope="col">Class</th>
                                     <th scope="col">Out Info</th>
-                                    <th scope="col">In Info</th>
-                                    <th scope="col">Out Time</th>
                                     <th scope="col">Place</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Companion</th>
+                                    <th scope="col">In Date</th>
+                                    <th scope="col">In Time</th>
+
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>01 Jan 2045</td>
-                                    <td>12.45</td>
-                                    <td>01 Jan 2045</td>
-                                    <td>8.00</td>
-                                    <td>Texas</td>
-                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
-                                    <td>Self</td>
+                                <tr class = "table-danger">
+                                    <td>20EUCS127</td>
+                                    <td>Shasha</td>
+                                    <td>III CSE C</td>
+                                    <td>15/09/2002</td>
+                                    <td>Coimbatore</td>
+                                    <td>25/09/2022</td>
+                                    <td>08:00 PM</td>
                                 </tr>
                                 <tr>
-                                    <td>01 Jan 2045</td>
-                                    <td>12.45</td>
-                                    <td>01 Jan 2045</td>
-                                    <td>8.00</td>
-                                    <td>Texas</td>
-                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
-                                    <td>Self</td>
+                                    <td>20EUCS127</td>
+                                    <td>Shasha</td>
+                                    <td>III CSE C</td>
+                                    <td>15/09/2002</td>
+                                    <td>Coimbatore</td>
+                                    <td>25/09/2022</td>
+                                    <td>08:00 PM</td>
                                 </tr>
                                 <tr>
-                                    <td>01 Jan 2045</td>
-                                    <td>12.45</td>
-                                    <td>01 Jan 2045</td>
-                                    <td>8.00</td>
-                                    <td>Texas</td>
-                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
-                                    <td>Self</td>
+                                    <td>20EUCS127</td>
+                                    <td>Shasha</td>
+                                    <td>III CSE C</td>
+                                    <td>15/09/2002</td>
+                                    <td>Coimbatore</td>
+                                    <td>25/09/2022</td>
+                                    <td>08:00 PM</td>
                                 </tr>
                                 <tr>
-                                    <td>01 Jan 2045</td>
-                                    <td>12.45</td>
-                                    <td>01 Jan 2045</td>
-                                    <td>8.00</td>
-                                    <td>Texas</td>
-                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
-                                    <td>Self</td>
+                                    <td>20EUCS127</td>
+                                    <td>Shasha</td>
+                                    <td>III CSE C</td>
+                                    <td>15/09/2002</td>
+                                    <td>Coimbatore</td>
+                                    <td>25/09/2022</td>
+                                    <td>08:00 PM</td>
                                 </tr>
                                 <tr>
-                                    <td>01 Jan 2045</td>
-                                    <td>12.45</td>
-                                    <td>01 Jan 2045</td>
-                                    <td>8.00</td>
-                                    <td>Texas</td>
-                                    <td><a class="btn btn-sm btn-success" href="">Granted</a></td>
-                                    <td>Self</td>
+                                    <td>20EUCS127</td>
+                                    <td>Shasha</td>
+                                    <td>III CSE C</td>
+                                    <td>15/09/2002</td>
+                                    <td>Coimbatore</td>
+                                    <td>25/09/2022</td>
+                                    <td>08:00 PM</td>
                                 </tr>
                             </tbody>
                         </table>
