Tutor Pages Updated

--- a/public/tutor-pending.html
+++ b/public/tutor-pending.html
@@ -110,6 +110,15 @@
                         <div class="modal-body">
                             <div class="bg-light rounded h-100 p-4">
                                 <dl class="row mb-0">
+                                    <dt class="col-sm-4">Place</dt>
+                                    <dd class="col-sm-8">Coimbatore</dd>
+
+                                    <dt class="col-sm-4">Purpose</dt>
+                                    <dd class="col-sm-8">For my family Get Together</dd>
+                                    
+                                    <dt class="col-sm-4">Companion</dt>
+                                    <dd class="col-sm-8">Self</dd>
+
                                     <dt class="col-sm-4">Parent Name</dt>
                                     <dd class="col-sm-8">Jose</dd>
 
@@ -143,7 +152,7 @@
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
-                        <h6 class="mb-0">TUTOR-LOG</h6>
+                        <h6 class="mb-0">Pending Requests</h6>
                         
                     </div>
                     <div class="table-responsive">
