Tutor Integeration and warden Onleave added

--- a/public/tutor-pending.html
+++ b/public/tutor-pending.html
@@ -58,15 +58,20 @@
                         <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
                     <div class="ms-3">
-                        <h6 class="mb-0">Angelin A</h6>
-                        <span>20EUCS187</span>
+                        <h6 class="mb-0">Sarah Lones</h6>
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="students-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
-                    <a href="students-form.html" class="nav-item nav-link"><i class="fa fa-plus-circle me-2"></i>Apply Outpass</a>
-                    <a href="students-status.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Track Status</a>
-                    <a href="students-history.html" class="nav-item nav-link active"><i class="fa fa-file-alt me-2"></i>Logs</a>
+                    <a href="tutor-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
+                    <a href="tutor-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
+                    <div class="nav-item dropdown">
+                        <a href="#" class="nav-link active dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Leave Requests</a>
+                        <div class="dropdown-menu bg-transparent border-0">
+                            <a href="tutor-pending.html" class="dropdown-item active">Pending</a>
+                            <a href="tutor-approved.html" class="dropdown-item">Approved</a>
+                        </div>
+                    </div>
+                    <a href="tutor-onleave.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>On Leave</a>
                 </div>
             </nav>
         </div>
@@ -77,7 +82,7 @@
         <div class="content">
             <!-- Navbar Start -->
             <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0">
-                <a href="students-profile.html" class="navbar-brand d-flex d-lg-none me-4">
+                <a href="tutor-profile.html" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
                 </a>
                 <a href="#" class="sidebar-toggler flex-shrink-0">
@@ -88,7 +93,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">Angelin A</span>
+                            <span class="d-none d-lg-inline-flex">Sarah Lones</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
                             <a href="index.html" class="dropdown-item">Log Out</a>
