--- a/public/tutor-approved.html
+++ b/public/tutor-approved.html
@@ -131,10 +131,10 @@
                                     <dt class="col-sm-4">Guardian Ph No</dt>
                                     <dd class="col-sm-8">6389076123</dd>
 
-                                    <dt class="col-sm-4">Warden Name</dt>
+                                    <dt class="col-sm-4">Tutor Name</dt>
                                     <dd class="col-sm-8">Cathrine</dd>
 
-                                    <dt class="col-sm-4">Warden Ph No</dt>
+                                    <dt class="col-sm-4">Tutor Ph No</dt>
                                     <dd class="col-sm-8">750985123</dd>
 
                                 </dl>
@@ -162,6 +162,7 @@
                                     <th scope="col">Name</th>
                                     <th scope="col">In Date & Time</th>
                                     <th scope="col">Out Date & Time</th>
+                                    <th scope="col">Class</th>
                                     <th scope="col">Place</th>
                                     <th scope="col">Companion</th>
                                     <th scope="col" >Details</th>
@@ -172,6 +173,7 @@
                                     <td>Angelin A</td>
                                     <td>01 Jan 2045,12.45</td>
                                     <td>01 Jan 2045,8.00</td>
+                                    <td>III CSE C</td>
                                     <td>Coimbatore</td>
                                     <td>Self</td>
                                     <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
@@ -181,16 +183,7 @@
                                     <td>Angelin A</td>
                                     <td>01 Jan 2045,12.45</td>
                                     <td>01 Jan 2045,8.00</td>
-                                    <td>Coimbatore</td>
-                                    <td>Self</td>
-                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
-                                    
-                                </tr>
-
-                                <tr>
-                                    <td>Angelin A</td>
-                                    <td>01 Jan 2045,12.45</td>
-                                    <td>01 Jan 2045,8.00</td>
+                                    <td>III CSE C</td>
                                     <td>Coimbatore</td>
                                     <td>Self</td>
                                     <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
@@ -201,6 +194,7 @@
                                     <td>Angelin A</td>
                                     <td>01 Jan 2045,12.45</td>
                                     <td>01 Jan 2045,8.00</td>
+                                    <td>III CSE C</td>
                                     <td>Coimbatore</td>
                                     <td>Self</td>
                                     <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
@@ -211,6 +205,18 @@
                                     <td>Angelin A</td>
                                     <td>01 Jan 2045,12.45</td>
                                     <td>01 Jan 2045,8.00</td>
+                                    <td>III CSE C</td>
+                                    <td>Coimbatore</td>
+                                    <td>Self</td>
+                                    <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
+                                    
+                                </tr>
+
+                                <tr>
+                                    <td>Angelin A</td>
+                                    <td>01 Jan 2045,12.45</td>
+                                    <td>01 Jan 2045,8.00</td>
+                                    <td>III CSE C</td>
                                     <td>Coimbatore</td>
                                     <td>Self</td>
                                     <td><a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalCenter">Details</a></td>
