--- a/public/warden-approved.html
+++ b/public/warden-approved.html
@@ -62,16 +62,16 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="tutor-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
-                    <a href="tutor-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
+                    <a href="warden-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
+                    <a href="warden-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link active dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Leave Requests</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="tutor-pending.html" class="dropdown-item">Pending</a>
-                            <a href="tutor-approved.html" class="dropdown-item active">Approved</a>
+                            <a href="warden-pending.html" class="dropdown-item">Pending</a>
+                            <a href="warden-approved.html" class="dropdown-item active">Approved</a>
                         </div>
                     </div>
-                    <a href="tutor-onleave.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>On Leave</a>
+                    <a href="warden-onleave.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>On Leave</a>
                 </div>
             </nav>
         </div>
@@ -152,7 +152,7 @@
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
-                        <h6 class="mb-0">Pending Requests</h6>
+                        <h6 class="mb-0">Approved List</h6>
                         
                     </div>
                     <div class="table-responsive">
