--- a/public/tutor-approved.html
+++ b/public/tutor-approved.html
@@ -152,7 +152,7 @@
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-light text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
-                        <h6 class="mb-0">Pending Requests</h6>
+                        <h6 class="mb-0">Approved List</h6>
                         
                     </div>
                     <div class="table-responsive">
