--- a/public/warden-pending.html
+++ b/public/warden-pending.html
@@ -62,19 +62,21 @@
                     </div>
                 </div>
                 <div class="navbar-nav w-100">
-                    <a href="tutor-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
-                    <a href="tutor-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
+                    <a href="warden-profile.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Profile</a>
+                    <a href="warden-ward.html" class="nav-item nav-link"><i class="fa fa-users me-2"></i>My Ward</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link active dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Leave Requests</a>
                         <div class="dropdown-menu bg-transparent border-0">
-                            <a href="tutor-pending.html" class="dropdown-item active">Pending</a>
-                            <a href="tutor-approved.html" class="dropdown-item">Approved</a>
+                            <a href="warden-pending.html" class="dropdown-item active">Pending</a>
+                            <a href="warden-approved.html" class="dropdown-item">Approved</a>
                         </div>
                     </div>
-                    <a href="tutor-onleave.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>On Leave</a>
+                    <a href="warden-onleave.html" class="nav-item nav-link"><i class="fa fa-file-alt me-2"></i>On Leave</a>
                 </div>
             </nav>
         </div>
+        
+        
         <!-- Sidebar End -->
 
 
