Added backend student module

--- a/public/students-history.html
+++ b/public/students-history.html
@@ -88,7 +88,7 @@
                             <span class="d-none d-lg-inline-flex">Angelin A</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="index.html" class="dropdown-item">Log Out</a>
+                            <a id="logout" class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
